<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.enso</groupId>
    <artifactId>base</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>base</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.ibm.icu</groupId>
            <artifactId>icu4j</artifactId>
            <version>67.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3.1</version>
                <configuration>
                    <outputDirectory>
                        ${project.build.directory}/../../distribution/std-lib/Base/polyglot/java
                    </outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>2.0.0</version>
                <executions>
                    <execution>
                        <id>add-third-party-licenses</id>
                        <phase>package</phase>
                        <goals>
                            <goal>download-licenses</goal>
                        </goals>
                        <configuration>
                            <licensesOutputDirectory>
                                ${project.build.directory}/../../distribution/std-lib/Base/third-party-licenses
                            </licensesOutputDirectory>
                        </configuration>
                    </execution>
                    <execution>
                        <id>add-third-party-licenses-list</id>
                        <phase>package</phase>
                        <goals>
                            <goal>add-third-party</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${project.build.directory}/../../distribution/std-lib/Base/third-party-licenses
                            </outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.10</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.ibm.icu</groupId>
                                    <artifactId>icu4j</artifactId>
                                    <version>67.1</version>
                                    <type>jar</type>
                                    <overWrite>true</overWrite>
                                    <destFileName>icu4j.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>
                                ${project.build.directory}/../../distribution/std-lib/Base/polyglot/java
                            </outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
